--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Tic-Tac-Toe Game</h1>
+    <h1>Tic-Tac-Toe</h1>
   <div id="gameBoard">
     <div class="cell" onclick="makeMove(0)"></div>
     <div class="cell" onclick="makeMove(1)"></div>
@@ -22,3 +22,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
